--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Led7219 matrix editor</title>
+    <title>led editor add mini link</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,6 +14,9 @@
     </div>
     <div id="export-all">
         <textarea name="" id="export-hex-col" cols="100" rows="3" readonly></textarea>
+        <br/>
+        <br/>
+        <textarea name="" id="export-hex-mini" cols="100" rows="3" readonly></textarea>
     </div>
     <div id="export-container">
         <div id="exported-data" style="white-space: pre-wrap; margin: 20px;"></div> <!-- Container for exported data -->
