--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <ul class="list-menu">
+        <li><a href="https://tranchausky.github.io/led7219-matrix-editor/">Home</a></li>
+        <li><a href="#">temp</a></li>
+        <li><a href="#">temp</a></li>
+    </ul>
     <button id="add-table">Add Table</button>
     <button id="export-tables">Export Tables</button>
     <button id="playexport">Play export</button>
