--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <div id="tables-container">
     </div>
     <div id="export-all">
+        <label for="">Hex Col</label><br/>
         <textarea name="" id="export-hex-col" cols="100" rows="3" readonly></textarea>
         <br/>
         <br/>
+        <label for="">Mini Hex Col</label><br/>
         <textarea name="" id="export-hex-mini" cols="100" rows="3" readonly></textarea>
     </div>
     <div id="export-container">
